@@ -1,3 +1,9 @@
+Thu Mar 12 15:28:41 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>
+
+        * orbsvcs/orbsvcs/LWFT/ReplicationManager.cpp:
+        
+          Fixed behavior of static_selection_algo ().
+
 Thu Mar 12 03:48:16 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>
 
         * orbsvcs/examples/FaultTolerance/FLARe/Worker/server.cpp        
